--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
   --font-regular: 18px;
   --font-small: 16px;
   --font-micro: 14px;
+
   /* Font weight */
   --weight-bold: 700;
   --weight-semi-bold: 600;
@@ -28,4 +29,33 @@
 /* Universal tags */
 * {
   box-sizing: border-box;
+}
+
+/* Typography */
+h1 {
+  font-size: var(--font-large);
+  font-weight: var(--weight-bold);
+  color: var(--color-black);
+  margin: 16px 0px;
+}
+
+h2 {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-semi-bold);
+  color: var(--color-black);
+  margin: 8px 0;
+}
+
+h3 {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-regular);
+  color: var(--color-black);
+  margin: 8px 0;
+}
+
+p {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-regular);
+  color: var(--color-black);
+  margin: 4px 0;
 }
