--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ p {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: transparent;
+  background-color: var(--color-pink);
   align-items: center;
   color: var(--color-white);
   padding: 16px;
@@ -122,6 +122,10 @@ p {
   display: flex;
 }
 
+.navbar__menu.open {
+  display: block;
+}
+
 .navbar__menu__item {
   padding: 8px 12px;
   margin: 0 4px;
@@ -138,7 +142,7 @@ p {
 
 .navbar__toggle-btn {
   position: absolute;
-  top: 24px;
+  top: 15px;
   right: 32px;
   font-size: 24px;
   color: var(--color-white);
@@ -361,7 +365,7 @@ p {
 }
 
 .project__description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
 .project__description h3:after {
@@ -369,9 +373,9 @@ p {
   display: block;
   position: relative;
   left: 50%;
-  width: 25px;
+  width: 50px;
   height: 2px;
-  margin-left: -12px;
+  transform: translateX(-50%);
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
