--- a/style.css
+++ b/style.css
@@ -103,14 +103,15 @@ p {
   background-color: var(--color-pink);
   align-items: center;
   color: var(--color-white);
-  padding: 16px;
+  padding: 13px;
+  background-color: transparent;
   transition: all var(--animation-duration) ease-in-out;
   z-index: 1;
 }
 
 #navbar.navbar--dark {
   background-color: var(--color-pink);
-  padding: 8px;
+  padding: 13px;
 }
 
 .navbar__logo {
@@ -120,10 +121,6 @@ p {
 
 .navbar__menu {
   display: flex;
-}
-
-.navbar__menu.open {
-  display: block;
 }
 
 .navbar__menu__item {
@@ -288,6 +285,7 @@ p {
   border-radius: var(--size--border-radius);
   font-size: var(--font-regular);
   padding: 8px 48px;
+  position: relative;
 }
 .category__btn.selected,
 .category__btn:hover {
@@ -307,9 +305,9 @@ p {
   height: 24px;
   display: inline-block;
   line-height: 24px;
-  position: relative;
+  position: absolute;
   top: -20px;
-  left: 4px;
+  right: 16px;
   opacity: 0;
   transition: all var(--animation-duration) ease-in;
 }
@@ -413,7 +411,7 @@ p {
 }
 
 .blog {
-  width: 45px;
+  width: 40px;
 }
 
 .contact__links {
@@ -452,8 +450,19 @@ p {
 }
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
+  :root {
+    /* Font size */
+    --font-large: 30px;
+    --font-medium: 18px;
+    --font-regular: 16px;
+    --font-small: 14px;
+    --font-micro: 12px;
+  }
   .navbar__toggle-btn {
     display: block;
+    top: 16px;
+    right: 16px;
+    font-size: var(--font-medium);
   }
 
   #navbar {
@@ -468,17 +477,46 @@ p {
     display: none;
   }
 
+  .navbar__menu.open {
+    display: block;
+  }
+
+  .section {
+    padding: 40px;
+  }
+
   .about__majors {
     flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
   .major {
-    margin-bottom: 38px;
+    margin-bottom: 33px;
   }
 
   .skillset {
     flex-direction: column;
   }
+  .category__btn {
+    margin: 4px 0;
+  }
   .project {
     flex-grow: 1;
+  }
+  .arrow-up {
+    height: 50px;
+    width: 50px;
+    font-size: 30px;
+    right: 16px;
+    bottom: 16px;
+    line-height: 50px;
+  }
+  .blog {
+    width: 30px;
+  }
+
+  .certificate__image {
+    width: 300px;
+    height: 300px;
   }
 }
